--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Santa Tell Me</h1>  
         
         <div id="nav_right"> 
-            <p class="horizontal_bar_not">login | sign up  &nbsp</p>
+            <p class="horizontal_bar_not">&nbsp</p>
             </div>
         </div>
     </div>
@@ -37,17 +37,17 @@
 
             <div id="wrapper2">
             <div class="second-list">
-                <h3 > Recipes </h3>
+                <h3> <a href="recipe.html">Recipes</a> </h3>
                 <img src="assests/recipes.png" />
             </div>
 
             <div class="second-list">
-                <h3> Music </h3>
+                <h3> <a href="Christmas_music_player/index.html">Music</a> </h3>
                 <img src="assests/music.png" />
             </div>
 
             <div class="second-list">
-                <h3> Community Forum </h3>
+                <h3> <a href="community.html.url">Community Forum</a> </h3>
                 <img src="assests/forum.png" />
             </div>
             </div>
