added community page

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
 
             <div class="second-list">
-                <h3> <a href="community.html.url">Community Forum</a> </h3>
+                <h3> <a href="https://finalchristmas-899d7.web.app">Community Forum</a> </h3>
                 <img src="assests/forum.png" />
             </div>
             </div>
